--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="description" content="This is an Ping Coming Soon Page"/> <!-- meta description is a brief summary of the content of a web page that is displayed in search results. -->
+  <meta name="keywords" content="Frontend Mentor, Ping Coming Soon Page, davidochoa.dev"/> <!-- is a list of relevant keywords for a specific web  page. However, is not used anymore due to abuse and spamming -->
+  <!-- The og:title is used to specify the title of a web page when it is shared on social media platforms. -->
+  <meta property="og:title" content="Ping Coming Soon Page" />
+  <!-- The og:description is used to specify the description of a web page when it is shared on social media platforms.-->
+  <meta property="og:description" content="Ping Coming Soon Page solution by davidochoadev"/>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/3b2cdd4eaa.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | Ping coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
