--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 
   &copy; Copyright Ping. All rights reserved.
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <footer class="author__section">
+    <a href="https://davidochoa.fly.dev" target="_blank" class="author__anchor">davidochoa.dev</a>
+    <span class="author__spacer">|</span>
+    <a href="https://github.com/davidochoadev/social-proof-section" class="author__anchor">Source Code</a>
   </footer>
 </body>
 </html>
