✅ Feat: Created Error animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <input type="email" name="email" placeholder="Your email address..." class="input__email">
       -->
       <input type="text" name="email" placeholder="Your email address..." class="input__email">
+      <p class="visually-hidden" id="error-message">
+        Please provide a valid email address
+      </p>
       <button type="submit" class="submit__button">
         Notify Me
       </button>
