✅ Feat: Created Pop-up

--- a/index.html
+++ b/index.html
@@ -21,6 +21,32 @@
 </head>
 <body>
   <main class="main__container">
+    <div class="alerts__container">
+      <div class="alert hidden__alert" id="wrong-pop-up">
+        <button class="alert__btn" id="wrong-btn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="alert__content__container">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="red" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+          </svg>
+          <p class="alert__description">Oops! Something Went Wrong 😵</p>
+        </div>
+        <progress value="50" max="100" id="wrong-bar"></progress>
+      </div>
+      <div class="alert hidden__alert" id="successful-pop-up">
+        <button class="alert__btn" id="successful-btn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="alert__content__container">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="green" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+          </svg>
+          <p class="alert__description">Thanks for Subscribing</p>
+        </div>
+        <progress value="50" max="100" id="successful-bar"></progress>
+      </div>
+    </div>
     <form class="form__container" novalidate>
       <!--
       <input type="email" name="email" placeholder="Your email address..." class="input__email">
@@ -29,7 +55,7 @@
       <p class="visually-hidden" id="error-message">
         Please provide a valid email address
       </p>
-      <button type="submit" class="submit__button">
+      <button type="submit" class="submit__button" id="submit-button">
         Notify Me
       </button>
     </form>
