✅ Feat: Created <h1> element with visually__hidden

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <main class="main__container">
+    <h1 class="visually__hidden">Ping</h1>
     <div class="alerts__container">
       <div class="alert hidden__alert" id="wrong-pop-up">
         <button class="alert__btn" id="wrong-btn">
