✅ Feat: Finished Structure

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <progress value="50" max="100" id="successful-bar"></progress>
       </div>
     </div>
+    <img src="./assets/images/logo.svg" alt="This is PING. Logo" class="main__logo">
+    <div>
+      <h2 class="main__title">We are launching <span>soon!</span></h2>
+      <p clasS="main__description">Subscribe and get notified</p>
+    </div>
     <form class="form__container" novalidate>
       <!--
       <input type="email" name="email" placeholder="Your email address..." class="input__email">
@@ -60,14 +65,11 @@
         Notify Me
       </button>
     </form>
+    <img src="./assets/images/illustration-dashboard.png" alt="This is a preview of PING. Dashboard" class="main__img">
+    <div>
+      <p class="main__copyright">&copy; Copyright Ping. All rights reserved.</p>
+    </div>
   </main>
-  We are launching soon!
-
-  Subscribe and get notified
-
-  Notify Me
-
-  &copy; Copyright Ping. All rights reserved.
 
   <footer class="author__section">
     <a href="https://davidochoa.fly.dev" target="_blank" class="author__anchor">davidochoa.dev</a>
