✅ Feat: Created Icons

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
     </form>
     <img src="./assets/images/illustration-dashboard.png" alt="This is a preview of PING. Dashboard" class="main__img">
     <div>
+      <div class="socials__container">
+        <span class="facebook__container hovering">
+          <i class="fa-brands fa-facebook-f"></i>
+        </span>
+        <span class="twitter__container hovering">
+          <i class="fa-brands fa-twitter"></i>
+        </span>
+        <span class="instagram__container hovering">
+          <i class="fa-brands fa-instagram"></i>
+        </span>
+      </div>
       <p class="main__copyright">&copy; Copyright Ping. All rights reserved.</p>
     </div>
   </main>
