--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="green" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
           </svg>
+          <p id="user-mail"></p>
           <p class="alert__description">Thanks for Subscribing</p>
         </div>
         <progress value="50" max="100" id="successful-bar"></progress>
@@ -58,9 +59,14 @@
       <input type="email" name="email" placeholder="Your email address..." class="input__email">
       -->
       <input type="text" name="email" placeholder="Your email address..." class="input__email">
-      <p class="visually-hidden" id="error-message">
-        Please provide a valid email address
-      </p>
+      <div class="error__message__container">
+        <p class="error__message visually-hidden" id="error-message">
+          Please provide a valid email address
+        </p>
+        <p class="error__message visually-hidden" id="forgot-message">
+          Whoops! You forgot to insert your email 🤷🏻‍♂️
+        </p>
+      </div>
       <button type="submit" class="submit__button" id="submit-button">
         Notify Me
       </button>
